He implementado otro tipo más, todavia no funciona del todo bien. Además, he añadido la configuracion para que podais ejecutar el proyecto desde eclipse dandole al boton verde